# deliveryLint

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/config/: authority_config.py  document_content_config.py  fact_extraction_config.py  settings.py  target_document_config.py
backend/app/db/: __init__.py  models.py
backend/app/domain/: authority.py  content.py  normalization.py
backend/app/fixtures/: mock_pipeline_outputs.py  sample_documents.py
backend/app/pipeline/: run_pipeline.py
backend/app/routes/: analysis.py
backend/app/schemas/: __init__.py  analysis_run.py  common.py  correction_ui.py  enums.py  fact_cluster.py  fact_parser.py  lint.py  pipeline.py  project_fact.py  source_profile.py  target_document.py  target_parser.py  upload.py
backend/app/scripts/: run_sample_pipeline.py
backend/app/services/: correction_ui.py  fact_clusterer.py  fact_parser.py  llm_client.py  llm_sanitize.py  source_profiler.py  target_parser.py  upload.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ReferenceMetadataForm.tsx
frontend/lib/: api.ts  constants.ts  types.ts
tests/: conftest.py
tests/integration/: test_sample_pipeline.py  test_upload_pipeline.py
tests/unit/: test_scaffold.py
tests/unit/config/: test_settings.py
tests/unit/db/: test_models.py
tests/unit/domain/: test_domain.py
tests/unit/schemas/: test_schemas.py  test_upload.py
tests/unit/services/: test_authority.py  test_llm_client.py  test_llm_sanitize.py
(+9 files in other folders)
